[gd_scene load_steps=5 format=2]

[ext_resource path="res://Crate.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2, 2, 2 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.937255, 0.184314, 0.105882, 0.568627 )
metallic = 1.0
roughness = 0.25
refraction_enabled = true
refraction_scale = 0.0
refraction_texture_channel = 0

[sub_resource type="SphereShape" id=3]
radius = 4.0

[node name="Crate" type="RigidBody" groups=["boxes"]]
collision_layer = 25
collision_mask = 25
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 1 )

[node name="TranslucentBox" type="CSGBox" parent="."]
material_override = SubResource( 2 )

[node name="ShadowEmitBox" type="CSGBox" parent="."]
cast_shadow = 3

[node name="GrabbableArea" type="Area" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
collision_layer = 2
collision_mask = 2

[node name="GrabbableShapeArea" type="CollisionShape" parent="GrabbableArea"]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0 )
shape = SubResource( 3 )

[node name="ToolTip" type="Panel" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="ToolTip"]
margin_left = 15.0
margin_top = 13.0
margin_right = 55.0
margin_bottom = 44.0
text = "G
"

[node name="OmniLight" type="OmniLight" parent="."]
visible = false
light_color = Color( 0.792157, 0.192157, 0.192157, 1 )
light_energy = 1.5
shadow_enabled = true
shadow_color = Color( 0.768627, 0.219608, 0.219608, 1 )
omni_range = 8.0

[connection signal="body_entered" from="GrabbableArea" to="." method="_on_GrabbableArea_body_entered"]
[connection signal="body_exited" from="GrabbableArea" to="." method="_on_GrabbableArea_body_exited"]
